- Fix MDEV-10948. Syntax error on quoted JDBC tables.   Was because the quoting character was always '"' instead of being   retrieve from the JDBC source.   modified:   storage/connect/JdbcInterface.java   modified:   storage/connect/jdbconn.cpp   modified:   storage/connect/tabjdbc.cpp